--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -3,7 +3,7 @@
 
   &-info {
     color: $default-tint;
-    font-family: $serif-secondary;
+    font-family: $monospaced;
     letter-spacing: 0.5px;
     text-align: center;
 
@@ -20,6 +20,12 @@
     text-align: center;
   }
 
+  h3,
+  h5,
+  ul {
+    font-family: $monospaced;
+  }
+
   &-line {
     border-top: 0.4rem solid $default-shade;
     display: block;
@@ -30,6 +36,7 @@
   p {
     margin: 0 0 1rem;
     text-align: justify;
+    font-family: $monospaced;
   }
 
   a:hover {
@@ -42,7 +49,7 @@
 
   img + em {
     color: $default-tint;
-    display: block;
+    display: yre;
     font-family: $sans-serif;
     font-size: 0.9rem;
     font-style: normal;
