Add logo and make corrections

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
+      <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" height="25"/>
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
