--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,8 +5,9 @@
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
-      <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
+      <li><a href="{{ '/data' | prepend: site.baseurl }}">Data</a></li>
+      <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
     </ul>
   </div>
 </nav>
