--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
-      <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" style="height: auto; width: 12%;"/>
+      <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" style="height: 25px;"/>
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
