--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,10 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
-      <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" style="height: 25px;"/>
-      <h2 class="nav-title">{{ site.title }}</h2>
+      <div class="nav-header-container">
+        <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" />
+        <h2 class="nav-title">{{ site.title }}</h2>
+      </div>
     </a>
     <ul>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
