--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -13,6 +13,16 @@ footer,
   width: 80%;
 }
 
+.nav-header-container {
+  max-height: 25px;
+}
+
+.nav-header-container img {
+  max-height: 100%;
+  max-width: 100%;
+  height: 25px;
+}
+
 .nav {
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
