Reverts responsive image change

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,8 @@
 <nav class="nav">
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
-      <div class="nav-header-container">
-        <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" />
-        <h2 class="nav-title">{{ site.title }}</h2>
-      </div>
+      <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" style="height: 25px;"/>
+      <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
