Add Wordpress link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,16 @@
       <i class="fa fa-twitter"></i>
     </a>
 {% endif %}
+&nbsp;
 {% if site.github_link %}
     <a href="https://github.com/{{ site.github_link }}">
       <i class="fa fa-github"></i>
+    </a>
+{% endif %}
+&nbsp;
+{% if site.wordpress_link %}
+    <a href="{{ site.wordpress_link }}">
+      <i class="fa fa-wordpress"></i>
     </a>
 {% endif %}
   </span>
