Enable compilation of stlyes and update content

--- a/_sass/tale.scss
+++ b/_sass/tale.scss
@@ -2,6 +2,7 @@
 @import 'tale/base';
 @import 'tale/code';
 @import 'tale/post';
+@import 'tale/page';
 @import 'tale/syntax';
 @import 'tale/layout';
 @import 'tale/pagination';
