Create search mechanism using lunr.js approach

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,6 +8,7 @@
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
       <li><a href="{{ '/random' | prepend: site.baseurl }}">Random</a></li>
       <li><a href="{{ '/data' | prepend: site.baseurl }}">Data</a></li>
+      <li><a href="{{ '/search' | prepend: site.baseurl }}">Search</a></li>
       <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
     </ul>
   </div>
