--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,9 @@ layout: default
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="left arrow">&#10510;</a>
   {% endif %}
+  {% if paginator.page != 1 %}
+    <span>{{ paginator.page }}</span>
+  {% endif %}
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="right arrow">&#10511;</a>
   {% endif %}
