Prepare pages for Amazon and refine footers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,26 +7,34 @@
     Original Chronology by
     <a href="{{ site.credits.url}}" alt="{{ site.credits.alt }}">
     {{site.credits.name}}
-    </a>.
+    </a>
   <br />
-    Made with Jekyll using the <a href="https://github.com/chesterhow/tale/">Tale</a> theme.
+    Made with Jekyll using the <a href="https://github.com/chesterhow/tale/">Tale</a> theme
   <br/>
 {% if site.twitter_username %}
-    <a href="https://twitter.com/{{ site.twitter_username }}">
-      <i class="fa fa-twitter"></i>
-    </a>
+    <a href="https://twitter.com/{{ site.twitter_username }}"
+       style="font-size: 1.2em;">
+      <i class="fab fa-twitter" alt="Ross Spencer on Twitter"></i>
+  </a>
 {% endif %}
 &nbsp;
 {% if site.github_link %}
-    <a href="https://github.com/{{ site.github_link }}">
-      <i class="fa fa-github"></i>
-    </a>
+  <a href="https://github.com/{{ site.github_link }}"
+     style="font-size: 1.2em;">
+    <i class="fab fa-github" alt="NASA Wakeup Calls on GitHub"></i>
+  </a>
 {% endif %}
 &nbsp;
 {% if site.wordpress_link %}
-    <a href="{{ site.wordpress_link }}">
-      <i class="fa fa-wordpress"></i>
-    </a>
+  <a href="{{ site.wordpress_link }}"
+     style="font-size: 1.2em;">
+    <i class="fab fa-wordpress" alt="Ross Spencer on Wordpress"></i>
+  </a>
 {% endif %}
   </span>
 </footer>
+
+
+
+
+
