Update Amazon associates link builder

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,13 +40,13 @@
   {% endif %}
 
   <!-- Amazon Associates -->
-  <SCRIPT charset="utf-8"
-          type="text/javascript"
-          src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupcal-21%2F8005%2F3c4428a3-e643-4f6f-bde1-96c2f2b4eb66">
-  </SCRIPT>
+  <SCRIPT charset="utf-8" 
+          type="text/javascript" 
+          src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupc08-21%2F8005%2F9ed1826b-b19a-4c3b-aead-3b675383d445"> 
+  </SCRIPT> 
   <NOSCRIPT>
-          <A rel="nofollow" HREF="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupcal-21%2F8005%2F3c4428a3-e643-4f6f-bde1-96c2f2b4eb66&Operation=NoScript">
+        <A rel="nofollow" HREF="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupc08-21%2F8005%2F9ed1826b-b19a-4c3b-aead-3b675383d445&Operation=NoScript">
             Amazon.co.uk Widgets
-          </A>
+        </A>
   </NOSCRIPT>
 </head>
