--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
   <div class="nav-container">
     <a href="{{ site.baseurl }}/">
       <img src="../assets/nasa-worm-logotype.png" alt="NASA: Worm Logo" align="left" style="height: 25px;"/>
-      <h2 class="nav-title">{{ site.title }}</h2>
+      <h2 class="nav-title">✧ {{ site.title }}</h2>
     </a>
     <ul>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
