--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
       <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
     {% endif %}
   </div>
-  <h1 class="post-title">{{ page.title }}</h1>
+  <h1 class="post-title">{{ page.blog_title }}</h1>
   <div class="post-line"></div>
   {{ content }}
 </div>
