--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -18,8 +18,9 @@
 
   &-time {
     color: $default-tint;
-    font-family: $serif-secondary;
+    font-family: $monospaced;
     letter-spacing: .5px;
+    font-size: 14px;
   }
 
   p {
