--- a/_sass/tale/_pagination.scss
+++ b/_sass/tale/_pagination.scss
@@ -1,19 +1,19 @@
 .pagination {
   border-top: .5px solid $grey-2;
-  font-family: $serif-secondary;
+  font-family: $monospaced;
   padding-top: 2rem;
   position: relative;
   text-align: center;
 
   span {
     color: $default-shade;
-    font-size: 1.1rem;
+    font-size: 0.8rem;
   }
 
   .top {
     @include transition(all .3s ease-out);
     color: $default-color;
-    font-family: $sans-serif;
+    font-family: $monospaced;
     font-size: 1.1rem;
     opacity: .6;
 
@@ -26,7 +26,7 @@
     @include transition(all .3s ease-out);
     color: $default-color;
     position: absolute;
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: bolder;
 
     &:hover,
