Add additional SEO optimizations
Modify some of the static pages for consistency.

--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -16,7 +16,7 @@ layout: default
     {% endif %}
   </div>
 
-  <h1 class="post-title">{{ page.title }}</h1>
+  <h1 class="post-title">{{ page.blog_title }}</h1>
   <div class="post-line"></div>
 
   {{ content }}
