--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16x16.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16.png" | relative_url }}">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/apple-touch-icon.png" | relative_url }}">
 
   <!-- Font-awesome for nice styles -->
@@ -37,10 +37,10 @@
   {% endif %}
 
   <!-- Amazon Associates -->
-  <SCRIPT charset="utf-8" 
-          type="text/javascript" 
-          src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupc08-21%2F8005%2F9ed1826b-b19a-4c3b-aead-3b675383d445"> 
-  </SCRIPT> 
+  <SCRIPT charset="utf-8"
+          type="text/javascript"
+          src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupc08-21%2F8005%2F9ed1826b-b19a-4c3b-aead-3b675383d445">
+  </SCRIPT>
   <NOSCRIPT>
         <A rel="nofollow" HREF="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fnasawakeupc08-21%2F8005%2F9ed1826b-b19a-4c3b-aead-3b675383d445&Operation=NoScript">
             Amazon.co.uk Widgets
